--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,15 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-   
+
 </head>
 
 <body class="mat-typography">
     <app-root></app-root>
-    
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>  
-   
+
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
     <div class="modal fade custom_search_pop" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -32,12 +33,17 @@
             </div>
         </div>
     </div>
-    
+
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'UA-23581568-13');        
+        gtag('config', 'UA-23581568-13');
+
+        document.addEventListener('wheel', function (e) {
+            e.preventDefault();
+            doStuff(e);
+        }, { passive: false });
     </script>
 
     <a id="scrollUp" href="#top" style="position: fixed; z-index: 2147483647; display: none;"><i
